@startuml
skinparam classAttributeIconSize 0

package "Presentation" #DDDDDD {
class ServiceDraftFieldSpecificationUI{

}
}


package "Application" #DDDDDD {
class ServiceDraftSpecificationController{
+create()
+getServiceDraftById(id)
+newDraft()
+addTitle()
+addBriefDescription(briefDescription)
+addCompleteDescription(completeDescription)
+addKeywordList(keywordList)
+addFeedback(feedback)
+saveServiceDraft(serviceDraft)
}
}


package "Domain" #DDDDDD {
class ServiceDraft{
- title
- briefDescription
- completeDescription
- keyword
- feedback
+create()
+setTitle()
+setBriefDescription(briefDescription)
+setCompleteDescription(completeDescription)
+setKeywordList(keywordList)
+setFeedback(feedback)
}

}

package Persistence #DDDDDD {
class PersistenceContext{
+repositories()
}

class AppSettings{
+instance()
+getRepositoryFactory()
}

package Factory #DDDDDD {
class RepositoryFactory{
+create()
+servicos()
+catalogos()
+formularios()
}
}

package "Repository" #DDDDDD {
class ServiceDraftRepository{
+create()
+save(serviceDraft)
}

interface ServiceDraftRepositoryInterface{

}



ServiceDraftFieldSpecificationUI ..> ServiceDraftSpecificationController
ServiceDraftSpecificationController ..> PersistenceContext

ServiceDraftRepository ..> ServiceDraftRepositoryInterface

AppSettings -> RepositoryFactory : creates
PersistenceContext -> AppSettings : implements

RepositoryFactory "1" -> "1" ServiceDraftRepository : has

ServiceDraftRepository "1" -> "*" ServiceDraft : saves

@enduml